edit: change admin creation endpoint; getAllStored moved to repository; getStoreProductPricesComparison and getStoreProductPricesComparisonAllStores logic moved to services